--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
     ],
     "require": {
         "php": ">=7.4.8",
-        "illuminate/support": "^^7.0",
-        "illuminate/validation": "^^7.0",
-        "giggsey/libphonenumber-for-php": "^^8.0",
+        "illuminate/support": "^7.0",
+        "illuminate/validation": "^7.0",
+        "giggsey/libphonenumber-for-php": "^8.0",
         "league/iso3166": "^2.0"
     },
     "require-dev": {
