--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "php": ">=7.4.8",
+        "php": "^7.4.0",
         "illuminate/support": "^7.0",
         "illuminate/validation": "^7.0",
         "giggsey/libphonenumber-for-php": "^8.0",
